servers/security_group.yml
Description:
  Written by DaEun Kim.
  This template deploys security group for each instance in subnets.


Parameters:
  TemplateName:
    Description: A stack's name to distinguish resources created by CloudFormation.
    Type: String


Resources:
  SecurityGroupForLB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: security group for Load Balancer
      GroupName: !Sub ${TemplateName}-security-group-LB
      VpcId:
        Fn::ImportValue:
          !Sub ${TemplateName}-VPCID
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
          Description: receive traffic via Internet
      SecurityGroupEgress:
        - CidrIp:
            Fn::ImportValue:
              Fn::GetAtt:
                !Sub "${TemplateName}-VPCID".CidrBlock
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
          Description: transfer traffic from outside to subnets in VPC

  SecurityGroupForTargets:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub security group for target instances in ${TemplateName}-VPCID
      GroupName: !Sub ${TemplateName}-security-group-targets
      VpcId:
        Fn::ImportValue:
          !Sub ${TemplateName}-VPCID
      SecurityGroupIngress:
        - CidrIp:
            Fn::ImportValue:
              Fn::GetAtt:
                !Sub "${TemplateName}-VPCID".CidrBlock
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
          Description: receive traffic from the same VPC
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          FromPort: 0
          ToPort: 65535
          IpProtocol: tcp
          Description: access internet without restriction to be able to download and update its software


Outputs:
  SecurityGroupForLB:
    Description: Security group for Load Balancer
    Value: !Ref SecurityGroupForLB
    Export:
      Name: !Sub ${TemplateName}-SECURITY-GROUP-LB

  SecurityGroupForTargets:
    Description: Security group for target instances
    Value: !Ref SecurityGroupForTargets
    Export:
      Name: !Sub ${TemplateName}-SECURITY-GROUP-TARGETS
